objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>CPU_managed_by_a_vSAN_competitor__c</fullName>
        <description>Created as part of CR-00138221</description>
        <label>% of CPUs managed by a vSAN competitor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPU_managed_in_Hyp_Conv_tech__c</fullName>
        <description>Created as part of CR-00138221</description>
        <inlineHelpText>% CPU Managed in hyper-converged technology</inlineHelpText>
        <label>% of CPUs managed in Hyp-Conv tech</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobiles_virtualized__c</fullName>
        <description>Created as part of CR-00137388</description>
        <label>% Mobiles Managed/Secured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>